# Vulture

./: .gitignore  README.md
backend/: .env.example  README.md  alembic.ini  main.py  pyproject.toml  smoke_enriched.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_add_finding_metadata.py  0002_chat.py
backend/app/: logger.py
backend/app/agents/: devsecops_agent.py  orchestrator.py  vuln_agent.py
backend/app/api/: auth.py  chat.py  connectivity.py  dependencies.py  reports.py  repos.py  routes.py  scans.py  schemas.py  ws.py
backend/app/code_parsing/: ast_parser.py  call_graph.py  file_reader.py  semgrep_runner.py  treesitter_parser.py
backend/app/export/: report_generator.py
backend/app/prompts/: devsecops_prompts.py  vuln_prompts.py
backend/app/storage/: crud.py  db.py  models.py
backend/app/tools/: bedrock_client.py
docs/: App Flow.md  Design.md  PRD.md  Tech Stack.md
docs/code_parsing/: 00_workflow.md  01_file_reader.md  02_ast_parser.md  03_treesitter_parser.md  04_call_graph.md  05_semgrep_runner.md  06_data_structures.md  07_important_notes.md  README.md
frontend/: .env.example  index.html  package-lock.json  package.json  replace.cjs  replace_neon.cjs  vite.config.js
frontend/src/: App.css  App.jsx  index.css  main.jsx
frontend/src/components/3d/: ThreatGlobe.jsx
frontend/src/components/layout/: Navbar.jsx
frontend/src/components/report/: IssueDetail.jsx  IssueList.jsx  OWASPRadar.jsx  ReportCard.jsx  ReportChat.jsx  ReportView.jsx  SeverityDonut.jsx
frontend/src/components/ui/: CyberButton.jsx  FloatingTerminal.jsx  GlitchText.jsx  SeverityBadge.jsx  TerminalLine.jsx  VantaFog.jsx
frontend/src/components/upload/: DropZone.jsx  (+1 more)
frontend/src/lib/: api.js  reportMapper.js  useAuthToken.js
frontend/src/pages/: Chat.jsx  Dashboard.jsx  Landing.jsx  Report.jsx  Scan.jsx
frontend/src/store/: scanStore.js
frontend/src/styles/: animations.css  globals.css
