[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "semgrep>=1.162.0",
    "tree-sitter>=0.25.2",
    "tree-sitter-c>=0.24.2",
    "tree-sitter-cpp>=0.23.4",
    "tree-sitter-go>=0.25.0",
    "tree-sitter-java>=0.23.5",
    "tree-sitter-javascript>=0.25.0",
    "tree-sitter-php>=0.24.1",
    "tree-sitter-ruby>=0.23.1",
    "tree-sitter-rust>=0.24.2",
    "tree-sitter-typescript>=0.23.2",
]
