[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.1",
    "google-generativeai>=0.8.0",
    "openai>=1.40.0",
    "pydantic>=2.13.4",
    "pyjwt>=2.12.1",
    "python-dotenv>=1.2.2",
    "sqlalchemy>=2.0.49",
    "tree-sitter>=0.25.2",
    "uvicorn[standard]>=0.46.0",
]
