[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "semgrep>=1.162.0",
    "tree-sitter>=0.25.2",
    "tree-sitter-c>=0.24.2",
    "tree-sitter-cpp>=0.23.4",
    "tree-sitter-go>=0.25.0",
    "tree-sitter-java>=0.23.5",
    "tree-sitter-javascript>=0.25.0",
    "tree-sitter-php>=0.24.1",
    "tree-sitter-ruby>=0.23.1",
    "tree-sitter-rust>=0.24.2",
    "tree-sitter-typescript>=0.23.2",
    "boto3>=1.35.0",
    "fastapi>=0.136.1",
    "google-generativeai>=0.8.0",
    "openai>=1.40.0",
    "pydantic>=2.13.4",
    "pyjwt>=2.12.1",
    "python-dotenv>=1.2.2",
    "sqlalchemy>=2.0.49",
    "tree-sitter>=0.25.2",
    "uvicorn[standard]>=0.46.0",
    "langgraph>=1.1.10",
    "langchain-google-genai>=4.2.2",
    "langchain-core>=1.3.3",
    "langchain-openai>=1.2.1",
]
